# uav_mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
flight_examples/delivery/: delivery_simulation.py
flight_examples/follow/: follow.py
flight_examples/polygon/: drive_polygon.py  go_to_polygon.py
flight_examples/uavs/: uav_1.ini  uav_2.ini
tests/: mcp_test.py  movement_test.py
uav_api/: api_app.py  copter.py  gradys_gs.py  log.py  router_dependencies.py  run_api.py  setup.py
uav_api/classes/: script.py
uav_api/routers/: command.py  mission.py  movement.py  telemetry.py
uav_mcp/: api_app.py  args.py  copter.py  log.py  mcp_app.py  router_dependencies.py  run_api.py  run_mcp.py  setup.py
uav_mcp/routers/: command.py  mission.py  movement.py  telemetry.py
