[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["uav_mcp*"]

[project]
name = "uav_mcp"
version = "0.1.0"
description = "Pure MCP server for controlling ArduPilot UAVs. Exposes drone command, movement, and telemetry as MCP tools using the official Python MCP SDK."
keywords = ["mavlink", "http", "simulation", "gradys", "LAC", "PUC", "drone", "ardupilot", "mcp", "llm"]
authors = [
    { name = "Francisco Meirelles Fleury", email = "franmeifleury@gmail.com" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

dependencies = [
    'mcp>=1.26.0',
    'MAVProxy>=1.8.71',
    'pydantic>=2.9.2',
    'pymavlink>=2.4.41',
    'future>=1.0.0',
    'pexpect>=4.9.0',
    'aiohttp>=3.9.0',
    'psutil>=5.9.0',
]

[project.urls]
"Homepage" = "https://github.com/Project-GrADyS/uav_mcp"

[project.scripts]
uav-mcp = "uav_mcp.run_mcp:main"